compiler/tests/snapshots/parse_success__regex_alternations.snap
---
source: compiler/tests/parse_success.rs
expression: "/\"a\" | \"b\" | \"c\"/"
---

=== Source ===
/"a" | "b" | "c"/

=== Tokens ===
[
    ForwardSlash(
        0,
        1,
    ),
    StringLiteral(
        2,
        3,
    ),
    Pipe(
        5,
        6,
    ),
    StringLiteral(
        8,
        9,
    ),
    Pipe(
        11,
        12,
    ),
    StringLiteral(
        14,
        15,
    ),
    ForwardSlash(
        16,
        17,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        17,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                17,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        17,
                    ),
                    kind: RegExpr(
                        RegExprNode {
                            pos: (
                                2,
                                15,
                            ),
                            kind: Alternation(
                                [
                                    RegExprNode {
                                        pos: (
                                            2,
                                            3,
                                        ),
                                        kind: Literal(
                                            "a",
                                        ),
                                    },
                                    RegExprNode {
                                        pos: (
                                            8,
                                            9,
                                        ),
                                        kind: Literal(
                                            "b",
                                        ),
                                    },
                                    RegExprNode {
                                        pos: (
                                            14,
                                            15,
                                        ),
                                        kind: Literal(
                                            "c",
                                        ),
                                    },
                                ],
                            ),
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

